threadCount removed, pause added

--- a/EcpSigner/config.json.example
+++ b/EcpSigner/config.json.example
@@ -2,7 +2,7 @@
   "login": "LOGIN", // Пользователь с доступом Администратора МО
   "password": "ПАРОЛЬ",
   "url": "https://ecp.medkirov.ru/", // Адрес сайта ECP
-  "threadCount": 10, // Количество одновременных потоков подписывания документов
+  "pauseMinutes": 15, // Количество минут между подписанием документов и получением следующих документов
   "cacheMinutes": 360, // Время до следующей попытки подписания документов, которые не удалось подписать
-  "ignoreDocTypes": [ ], // Список игнорируемых типов документов (будут отображаться в логе, но не будут подписываться)
+  "ignoreDocTypes": [] // Список игнорируемых типов документов (будут отображаться в логе, но не будут подписываться)
 }
