--- a/EcpSigner/config.json.example
+++ b/EcpSigner/config.json.example
@@ -2,7 +2,8 @@
   "login": "LOGIN", // Пользователь с доступом Администратора МО
   "password": "ПАРОЛЬ",
   "url": "https://ecp.medkirov.ru/", // Адрес сайта ECP
-  "pauseMinutes": 15, // Количество минут между подписанием документов и получением следующих документов
-  "cacheMinutes": 360, // Время до следующей попытки подписания документов, которые не удалось подписать
+  "pauseMinutes": 15, // Количество минут между подписанием документов и получением следующих документов (от 1 минуты до 1 недели)
+  "cacheMinutes": 360, // Время до следующей попытки подписания документов, которые не удалось подписать (от 1 минуты)
+  "signingIntervalSeconds": 2, // Количество секуд между подписанием документа и началом подписания следующего (от 1 секунды до 1 минуты)
   "ignoreDocTypes": [] // Список игнорируемых типов документов (будут отображаться в логе, но не будут подписываться)
 }
