--- a/EcpSigner/config.json.example
+++ b/EcpSigner/config.json.example
@@ -5,5 +5,5 @@
   "pauseMinutes": 15, // Количество минут между подписанием документов и получением следующих документов (от 1 минуты до 1 недели)
   "cacheMinutes": 360, // Время до следующей попытки подписания документов, которые не удалось подписать (от 1 минуты)
   "signingIntervalSeconds": 1, // Количество секуд между подписанием документа и началом подписания следующего (от 1 секунды до 1 минуты)
-  "ignoreDocTypes": [ "BirthSvid", "DeathSvid", "EvnPL", "PntDeathSvid", "EvnPrescrMse" ] // Список игнорируемых типов документов (будут отображаться в логе, но не будут подписываться)
+  "ignoreDocTypes": [ "BirthSvid", "DeathSvid", "PntDeathSvid", "EvnPrescrMse" ] // Список игнорируемых типов документов (будут отображаться в логе, но не будут подписываться)
 }
